# maleo

./: Cargo.toml  README.md
docs/: api.md  element.md  element_props.md  elements.md
docs/elements/: col.md  rect.md  row.md
examples/: counter.rs  demo.rs  demo2.rs  demo3.rs  simple.rs  test.rs  todolist.rs  tv.rs
shaders/: rounded_rect.wgsl  shadow.wgsl
src/: app.rs  color.rs  ctx.rs  draw.rs  element.rs  events.rs  fonts.rs  input.rs  layout.rs  lib.rs  mouse.rs  prelude.rs  settings.rs  shapes.rs  state.rs  task.rs  text.rs  ui.rs  window.rs
src/render/: draw.rs  draw_ctx.rs  gpu.rs  shadow_renderer.rs  shape_renderer.rs  text_renderer.rs
src/widgets/: button.rs  containers.rs  manager.rs  mod.rs  rect.rs  slider.rs  text.rs  text_editor.rs  text_input.rs
