[package]
name = "bento"
version = "0.3.0"
edition = "2024"

[dependencies]
wgpu = "25"
glyphon = "0.9"
bytemuck = { version = "1.14", features = ["derive"] }
winit = "0.30"
pollster = "0.3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
taffy = "0.9.2"

[dev-dependencies]
winit = "0.30"
pollster = "0.3"
